Next version of web file.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hola Coursera</title>
   </head>
   <body>
-    <h1>Hola Coursera buenos días</h1>
+    <h1>Hola Coursera buenos días como están</h1>
   </body>
 </html>
